kubernetes/system/traefik/dashboard-route.yml
# Authelia Middleware for Kube-System
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia
  namespace: kube-system
spec:
  forwardAuth:
    address: http://authelia.apps.svc.cluster.local:9091/api/verify?rd=https://auth.woitzik.dev/
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
---
# Traefik Dashboard (Must be in kube-system to access api@internal)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`traefik.woitzik.dev`)
    kind: Rule
    middlewares: [{name: authelia}]
    services: [{name: api@internal, kind: TraefikService}]
  tls: {secretName: wildcard-woitzik-dev-tls}
